src/store.css
/* ... */
 @media (max-width: 850px) {
   .popUpTemplate {
     outline: none;
     width: 95vw;
     align-items: center;
   }
   .popUpTemplate img {
     width: 55%;
     min-width: 217px;
   }
   .popUpTemplate .details {
     width: 45%;
   }
 }
 @media (max-width: 700px) {
   .popUpTemplate {
     bottom: 0%;
     flex-direction: column;
     background-color: rgba(0, 0, 0, 0.55);
     width: 100vw;
     height: 100vh;
   }
   .popUpTemplate img {
     width: 40%;
   }
   .popUpTemplate .details {
     padding-left: 0px;
     align-items: center;
     width: 100%;
   }
   .popUpTemplate .details .qtyToggle {
     padding: 0.7em;
     justify-content: space-between;
     width: 100px;
     gap: 25%;
   }
   .white-bg-Btn {
     margin: 0em auto 2em auto;
     text-align: center;
     display: block;
     /* align-self: center; */
     /* margin: 0em auto 2em auto; */
   }
 }
 
 .gender {
   margin-bottom: 10px;
 }
 
 .cartContainer {
   position: fixed;
   top:0px;
   right:-550px;
   background-color: rgb(255, 255, 255);
   color: black;
   width: 550px;
   height: 100vh;
   display: flex;
   padding: .5em;
   padding-bottom: 10em;
   flex-direction: column;
   gap:20px;
   z-index: 3;
   overflow: scroll;
   transition: .3s;
 }
 
 .cartMessage {
   position: absolute;
   margin-left: auto;
   margin-right: auto;
   top:30%;
   left: 0;
   right: 0;
   text-align: center;
   font-size: 30px;
   font-weight: bold;
   opacity: .3;
   transition: .3s;
   z-index: -1;
 }

 .cartMessageRemoved {
  z-Index: 2;
   top: 0%;
    opacity: .8;
     height: 100%;
      background-Color: rgba(255, 255, 255, 0.68);
      display: flex;
      align-items: center;
      justify-content: center;
    }

 
 
 .cart {
   display: flex;
   flex-direction: column;
   gap:20px
 }
 
 .detailsContainer {
   display: flex;
   justify-content: space-between;
   font-size:14px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   position: relative;
 }
 
 .detailsContainer .n {
  font-size:18px;
 }
 
 .detailsContainer img {
   width: 30%;
 }
 
 .cartContainer .remove {
   align-self: flex-end;
   text-decoration: underline;
   cursor: pointer;
   font-size: 15px;
 }
 
 .checkoutContainer {
   position: fixed;
   right:-550px;
   bottom: 0px;
   background-color: rgba(0, 0, 0, 0.798);
   color:gold;
   z-index: 4;
   font-size: 22px;
   width: 100%;
   width: 550px;
   padding: 1em 1em;
   text-align: center;
   cursor: pointer;
   font-weight: 600;
   transition: .3s;
 }
 
 .checkoutContainer div:nth-child(2) {
    text-align: start;
   }
 
 
 
 .total {
   font-weight: 700;
 }
 
 .closeCart {
   position: absolute;
   top: 2%;
   right: 5%;
   display: flex;
   align-items: center;
   flex-direction: column;
   font-size: 20px;
   cursor: pointer;
   color: gold;
   z-index: 5;
 }
 
 .closeCart i {
  font-size: 30px;
 }
 
 @media(max-width:520px){
   .cartContainer { width: 100vw;}
   .checkoutContainer { width: 100vw;}
   .checkoutContainer div:nth-child(2) { text-align: center;}
   .detailsContainer .n { font-size:14px;}
   .detailsContainer .s { font-size:12px;}
   .detailsContainer .p { font-size:12px;}
   .detailsContainer .q { font-size:12px;}
 }

